<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/blue_dark">

                <ImageView
                    android:id="@+id/btGrid"
                    android:layout_width="24dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:contentDescription="@string/cd_grid"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/icon_grid_white_4" />

                <ImageView
                    android:id="@+id/btSearch"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:contentDescription="@string/cd_search"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/icon_search_white" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etSearch"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_short"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:layout_marginBottom="@dimen/margin_short"
                    android:background="@drawable/search_background"
                    android:hint="@string/search"
                    android:imeOptions="actionSearch|flagNoExtractUi"
                    android:inputType="textPersonName"
                    android:paddingStart="@dimen/margin_normal"
                    android:paddingEnd="36dp"
                    android:textColor="@color/blue_dark"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btSearch"
                    app:layout_constraintStart_toEndOf="@+id/btGrid"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/btClear"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="@dimen/margin_short"
                    android:contentDescription="@string/cd_clear"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@id/etSearch"
                    app:layout_constraintEnd_toEndOf="@+id/etSearch"
                    app:layout_constraintTop_toTopOf="@+id/etSearch"
                    app:srcCompat="@drawable/icon_x_bluedark" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/unit_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background"
        android:clipToPadding="true"
        android:paddingHorizontal="@dimen/margin_short"
        android:paddingTop="@dimen/margin_normal"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:spanCount="2"
        tools:listitem="@layout/item_field" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>