<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue_dark">

        <ImageView
            android:id="@+id/btBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/margin_normal"
            android:contentDescription="@string/cd_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_back_white" />

        <TextView
            android:id="@+id/fieldName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fieldIcon"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:text="Temperature" />

        <ImageView
            android:id="@+id/fieldIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/cd_unit"
            app:layout_constraintBottom_toBottomOf="@id/fieldName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fieldName"
            app:layout_constraintTop_toTopOf="@id/fieldName"
            app:layout_constraintVertical_bias="0.5"
            tools:srcCompat="@drawable/icon_time_white" />

        <ImageView
            android:id="@+id/btClear"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="@dimen/margin_normal"
            android:contentDescription="@string/cd_clear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_x_white"
            android:visibility="invisible"
            tools:visibility="visible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginVertical="@dimen/margin_normal"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginHorizontal="@dimen/margin_short"
                        android:layout_marginVertical="@dimen/margin_short"
                        android:hint="@string/from"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btArrows"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5">

                        <AutoCompleteTextView
                            android:id="@+id/tvUnitFrom"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:labelFor="@id/tvUnitFrom"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:id="@+id/btArrows"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:contentDescription="@string/cd_arrows"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5"
                        app:srcCompat="@drawable/icon_arrows1" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginHorizontal="@dimen/margin_short"
                        android:layout_marginVertical="@dimen/margin_short"
                        android:hint="@string/to"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/btArrows"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5">

                        <AutoCompleteTextView
                            android:id="@+id/tvUnitTo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:labelFor="@id/tvUnitTo"
                            android:textSize="20sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvNameFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="2dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="Meter" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_normal"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/etValueFrom"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginHorizontal="@dimen/margin_normal"
                        android:layout_marginVertical="@dimen/margin_normal"
                        android:ems="10"
                        android:imeOptions="actionDone|flagNoExtractUi"
                        android:inputType="numberDecimal"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/tvUnitFromDetail"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5"
                        tools:text="8451"
                        android:importantForAutofill="no" />

                    <TextView
                        android:id="@+id/tvUnitFromDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5"
                        tools:text="m" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/btArrows2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginVertical="@dimen/margin_normal"
                android:layout_gravity="center"
                android:contentDescription="@string/cd_arrows"
                android:rotation="90"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:srcCompat="@drawable/icon_arrows1" />


            <TextView
                android:id="@+id/tvNameTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="2dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="Centimeter" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_normal"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvValueTo"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginHorizontal="@dimen/margin_normal"
                        android:layout_marginVertical="@dimen/margin_normal"
                        android:ems="10"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/blue_dark"
                        android:textSize="32sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/tvUnitToDetail"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5"
                        tools:text="8451" />

                    <TextView
                        android:id="@+id/tvUnitToDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:textColor="@color/blue_dark"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5"
                        tools:text="km" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>
</LinearLayout>